# git-tree

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: detailed.rs  detailed_depth.rs  no_git_repo.rs  summary.rs  summary_depth.rs
tests/fixtures/: additions_deletions.sh  additions_deletions_depth.sh  no_changes.sh  no_changes_depth.sh  some_changes.sh  some_changes_depth.sh  some_staged_changes.sh  some_staged_changes_depth.sh
tests/fixtures/generated-archives/: additions_deletions.tar  additions_deletions_depth.tar  no_changes.tar  no_changes_depth.tar  some_changes.tar  some_changes_depth.tar  some_staged_changes.tar  some_staged_changes_depth.tar
