[package]
name = "git-tree"
version = "0.1.5"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>"]
edition = "2021"
description = "tree + git status: displays git status info in a tree"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = [ "derive", "wrap_help" ] }
# We vendor OpenSSL. If we do not, compilation will fail on recent (as of
# January 2023) Ubuntu systems.
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
gix = { version = "0.80.0", default-features = false, features = [ "max-performance", "status" ] }

[dev-dependencies]
gix-testtools = "0.18.0"
snapbox = { version = "1.1.0", features = ["cmd", "term-svg"] }
