[package]
name = "git-tree"
version = "0.1.5"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>"]
edition = "2021"
description = "tree + git status: displays git status info in a tree"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = [ "derive", "wrap_help" ] }
gix = { version = "0.80.0", default-features = false, features = [ "max-performance", "status" ] }

[dev-dependencies]
gix-testtools = "0.18.0"
snapbox = { version = "1.2.0", features = ["cmd", "term-svg"] }
