[package]
name = "git-tree"
version = "0.2.0"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>"]
edition = "2021"
description = "tree + git status: displays git status info in a tree"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive", "wrap_help" ] }
gix = { version = "0.84.0", default-features = false, features = [ "max-performance", "sha1", "status" ] }
termtree = "1.0.0"

[dev-dependencies]
gix-testtools = "0.18.0"
snapbox = { version = "1.2.2", features = ["cmd", "term-svg"] }
